# F23-core-course-labs

./: .editorconfig  .gitgnore  .gitignore  .gitmodules  .pre-commit-config.yaml  12.md  14.md  CI.MD  CI.md  DOCKER.md  Dockerfile  PYTHON.md  README.md  TF.md  docker-compose.yaml  docker-compose.yml  lab1.md  lab10.md  lab11.md  lab12.md  lab13.md  lab14.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md  requirements.txt
app_cplusplus/: CMakeLists.txt  CPLUSPLUS.md  Dockerfile  README.md  conanfile.txt
app_cplusplus/src/: Server.cpp  Server.hpp  main.cpp
app_cplusplus/templates/: index.html
app_cplusplus/test/: CMakeLists.txt  checkServer.cpp
app_cpp/: .dockerignore  CMakeLists.txt  CPP.md  DOCKER.md  Dockerfile  README.md  main.cpp
app_cpp/src/: CMakeLists.txt  main.cpp
app_cpp/src/Server/: CMakeLists.txt  Server.cpp  Server.h  Session.cpp  Session.h
app_cpp/src/Test/: CMakeLists.txt  test.cpp
app_python/: .Dockerignore  .coverage  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config-old.yaml  .pre-commit-config.yaml  .pylintrc  CI.md  DOCKER.MD  DOCKER.md  DOCKERFILE.md  Dockerfile  Makefile  MoscowTime.py  PYTHON.MD  PYTHON.md  README.MD  README.md  TEST.MD  TF.md  __main__.py  app.py  app_test.py  config.py  conftest.py  deployment.yml  dev-requirements.txt  dev.py  dev.sh  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  healthcheck.sh  index.py  interface.py  logic.py  main.cpp  (+25 more)
app_python/.github/workflow/: github-actions.yml
app_python/.github/workflows/: ci.yml  deploy.yml  main.yaml  python-ci.yml  python.yml  tests.yml
app_python/api/model/: time.py
app_python/api/route/: time.py
app_python/api/schema/: time.py
app_python/api/service/: time.py
app_python/app/: __init__.py  main.py  middlewares.py  settings.py  test_main.py
app_python/app/controllers/: healthcheck.py  time.py  visits.py
app_python/app/docs/: __init__.py
app_python/app/server/: server.py
app_python/app/templates/: current_time.html  index.html  visits.html
app_python/app/testutils/: testutils.py
app_python/app/timeutils/: timeutils.py
app_python/app/utils/: time.py
app_python/app/views/: metrics_view.py  (+2 more)
app_python/app_python/: asgi.py  settings.py  urls.py  wsgi.py
app_python/application/: __init__.py  app.py  routes.py
app_python/core/: settings.py  urls.py
app_python/data/: visits.json
app_python/docker/: Dockerfile  docker-entrypoint.sh
app_python/flaskr/: __init__.py  util_functions.py
app_python/formatter/: create-pre-commit-hook  pre-commit
app_python/handlers/: routes.py
app_python/kitty/: apps.py  tests.py  urls.py  views.py
app_python/lab1/: apps.py  test_views.py  tests.py  urls.py  views.py
app_python/learn-terraform-docker-container/: terraform.tfstate  terraform.tfstate.backup
app_python/main/: app.py  tests.py
app_python/myapp/: apps.py  models.py  tests.py  views.py
app_python/myproject/: .dockerignore  Dockerfile  requirements.txt
app_python/requirements/: base.txt  dev.txt  prod.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt
app_python/routers/: time.py  visits.py
app_python/schemas/: time.py  visits.py
app_python/scripts/: init-git-hooks  pre-commit
app_python/src/: __init__.py  __main__.py  app.py  config.py  index.py  main.py  router.py  run.py  server.py  service.py  settings.py  test.py  test_app.py  test_main.py  test_service.py  time_provider.py  timezone.py  utils.py  visits_counter.py
app_python/static/: index.html  script.js  style.css  styles.css
app_python/templates/: base.html  currentTime.html  current_time.html  error.html  index.html  templates.py  time.html  visitors.html  visits.html
app_python/terraform/: TF.md
app_python/test/: conftest.py  test.py  test_app.py  test_main.py
app_python/tests/: app_test.py  app_tests.py  client.py  conftest.py  endpoints_test.py  test.py  test_app.py  test_client.py  test_clock.py  test_code200.py  test_datetime.py  test_display_msk_time.py  test_home.py  test_main.py  test_moscow_time_handler.py  test_msk_time.py  test_refresh_time.py  test_response.py  test_routes.py  test_show_time.py  test_time.py  test_timezone.py  tests.py  time_provider_test.py  time_tests.py
app_python/volume/: visits.txt
lab01/app_rust/: CI.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  RUST.md
(+2378 files in other folders)
