[tool.poetry]
name = "app-python"
version = "0.1.0"
description = ""
authors = ["vlasov-egor <vlasov-egorl@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pytz = "^2023.3.post1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
