[tool.poetry]
name = "devops time"
version = "0.1.0"
description = ""
authors = ["bizuki <dollar.daler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
pytz = "^2023.3.post1"
starlette = "0.27.0"
pydantic = "1.10.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
freezegun = "^1.2.2"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
pycodestyle = "^2.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
