[package]
name = "app_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
prometheus = { version = "0.13.3", features = ["process"] }
rocket = "=0.5.0-rc.3"
